--- a/client/modules/Assignment/componets/Category/Category.css
+++ b/client/modules/Assignment/componets/Category/Category.css
@@ -4,12 +4,22 @@
 	min-width: 100%;
 	display: block;
 	color:white;
+	font-size: 20px;
+  	font-weight: bold;
 }
 
 .card{
-	min-width: 250px;
 	min-height: 250px;
-	width: 250px;
 	height: 250px;
-	background-color: black;
+	background-color: lightgray;
+	padding-right: 0px !important; 
+	padding-left: 0px !important;
+	box-shadow: 4px 4px 8px #888888;
+	margin-right: 10px;
+  	margin-left: 10px;
+  	margin-bottom: 10px;
+}
+
+.border_fix{
+	border-top: 1px !important;
 }
