made the text the proper color will be done tomorrow

--- a/client/modules/Assignments/modules/Category/Category.css
+++ b/client/modules/Assignments/modules/Category/Category.css
@@ -28,6 +28,10 @@
 	text-align: center;
 }
 
-.panel_heading{
-	background-color: #005BBB !important;
+.panel_custom div:first-of-type{
+	text-align: center;
+	font-weight: bold;
+	color:white;
+	font-size: 15px;
+ 	background-color: #005BBB;
 }
