cleaned up header and made it work better as well as added a logout button

--- a/client/modules/App/components/Header/Header.css
+++ b/client/modules/App/components/Header/Header.css
@@ -38,3 +38,14 @@
   margin-right: 10px;
   margin-left: 10px;
 }
+
+.inactiveLink {
+   pointer-events: none;
+   cursor: default;
+}
+
+.headerIcon{
+  line-height: 2.2 !important;
+  cursor: pointer;
+
+}
