Edited login and courses to use MUI
Login, Header, Footer, and Course have all been converted to
material UI

--- a/client/main.css
+++ b/client/main.css
@@ -1,14 +1,6 @@
 /*
   Global CSS file
 */
-*{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	line-height: normal;
-}
 
 ::-webkit-input-placeholder {
 	color:#aaa;
@@ -28,7 +20,11 @@ input:-moz-placeholder {
 }
 
 body {
-	background: #FFF;
-	font-family: 'Lato', sans-serif;
-	font-size: 16px;
+	background-color: #757575 !important;
+	margin: 0 0 50px;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
 }
