--- a/client/modules/App/components/Footer/Footer.css
+++ b/client/modules/App/components/Footer/Footer.css
@@ -1,11 +1,16 @@
-.footer{
+.footer {
   text-align: center;
-  padding: 56px 0;
-  background-size: cover;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 50px;
+  width: 100%;
+  overflow:hidden;
 }
 
+
 .footer p{
-  margin: 0 0 8px 0;
+  text-align: center;
   font-size: 14px;
   color: #000000;
 }
