Added UI changes to assignment and the general theme
Changed to white background, fixed logout icon link. MAKE SURE TO
`npm install` new dependencies.

--- a/client/main.css
+++ b/client/main.css
@@ -20,7 +20,7 @@ input:-moz-placeholder {
 }
 
 body {
-	background-color: #757575 !important;
+	background-color: whitesmoke !important;
 	margin: 0 0 50px;
 }
 
