Changed Assignments UI, NOT DONE

--- a/client/modules/App/components/Footer/Footer.css
+++ b/client/modules/App/components/Footer/Footer.css
@@ -6,7 +6,7 @@
   height: 50px;
   width: 100%;
   overflow:hidden;
-  background-color: #2962FF !important;
+  background-color: #005bbb !important;
 }
 
 
