--- a/client/components/Alert/Alert.css
+++ b/client/components/Alert/Alert.css
@@ -3,6 +3,7 @@
   margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+  font-family: Roboto,sans-serif;
 }
 
 .error{
