--- a/client/modules/Assignments/modules/Category/Category.css
+++ b/client/modules/Assignments/modules/Category/Category.css
@@ -34,10 +34,26 @@
 	
 }
 
+.menuDiv > div{
+	display: block !important;
+	width: 100% !important;
+	overflow: auto;
+}
+
+.menu {
+	display: block !important;
+	width: 100% !important;
+}
+
 .header{
 	font-weight: bold;
 	font-size: 15px;
  	background-color: #005BBB !important;
- 	color: white !important;
  	border-bottom: 2px solid black;
+}
+
+.text > div > span{
+	color: white !important;
+	font-weight: bold !important;
+	font-size: 1.2em !important;
 }
