--- a/client/modules/App/components/Login/Login.css
+++ b/client/modules/App/components/Login/Login.css
@@ -1,9 +1,10 @@
 .login_button_anchor{
 	color: white;
 }
-.butt{
-	width: 50%;
-}
+
 .div{
-	padding-top: 15%;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 3em;
+	padding-top: 7%;
+	padding-bottom: 7%;
 }
