--- a/client/modules/App/components/Login/Login.css
+++ b/client/modules/App/components/Login/Login.css
@@ -1,3 +1,10 @@
 .login_button_anchor{
 	color: white;
 }
+
+.div{
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 3em;
+	padding-top: 7%;
+	padding-bottom: 7%;
+}
